fdo#82312 - Excel chart has a wrong size

bug introduced in commit 0c7f35277575fee8594737f5b2842dfac2c6d04f
"remove SvStream::operator>> methods"

Change-Id: I72a1c05b3a4a3f3a250055775eb2d35b3114406d